<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment"
    android:paddingTop="@dimen/setting_menu_top_gap">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle|beginning|end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_type"
            style="@style/SettingMenu"
            android:id="@+id/setting_menu1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            style="@style/SettingMenu"
            android:id="@+id/setting_menu2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_setting"
            style="@style/SettingMenu"
            android:id="@+id/setting_menu3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:layout_marginTop="@dimen/setting_menu_gap"
        android:showDividers="middle|beginning|end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_setting"
            style="@style/SettingMenu"
            android:id="@+id/setting_menu4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:layout_marginTop="@dimen/setting_menu_gap"
        android:showDividers="middle|beginning|end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            style="@style/SettingMenu"
            android:id="@+id/setting_menu5"/>

    </LinearLayout>

</LinearLayout>